--- a/ocr-starter/package.json
+++ b/ocr-starter/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.5.2",
+    "@mui/x-date-pickers": "^7.11.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
