Update code for Remote Config and Custom Definition

--- a/rc-starter/firebase.json
+++ b/rc-starter/firebase.json
@@ -3,11 +3,17 @@
     "source": "functions"
   },
   "hosting": {
-    "source": ".",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
