--- a/rc-starter/functions/package.json
+++ b/rc-starter/functions/package.json
@@ -14,7 +14,8 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/vision": "^2.4.2",
-    "firebase-admin": "^10.0.2",
+    "firebase": "^10.12.5",
+    "firebase-admin": "^10.3.0",
     "firebase-functions": "^3.22.0"
   },
   "devDependencies": {
